# pcs-core

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  justfile  pytest.ini  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
benchmarks/: README.md
catalog/: pf_core.catalog.json
conformance/: README.md
docs/: README.md  artifact-lifecycle.md  artifact-registry.md  benchmark-compatibility.md  benchmark-ingest-contract.md  benchmark-metrics.md  benchmark-object-model.md  benchmark-registry.md  benchmark-schema-contract-v0.md  benchmarks.md  distribution.md  downstream-schema-sync.md  examples.md  hash-canonicalization.md  json-schema-formats.md  labtrust-rc-canonical.md  labtrust-release-fixtures.md  labtrust-v0.1-profile.md  lean-trust-kernel.md  migration-policy.md  mutation-testing.md  pf-core-trace-mapping.md  pf-core-v0.7.0-reward-schema-upstream.md  (+12 more)
python/: .coveragerc  pyproject.toml  pyrightconfig.json
python/pcs_core/: __init__.py  artifact.py  artifact_integrity.py  asset_resolver.py  benchmark_case_normalize.py  benchmark_compat.py  benchmark_ingest.py  benchmark_labtrust_gallery.py  benchmark_localization.py  benchmark_metric_registry.py  benchmark_metric_registry_data.py  benchmark_metrics.py  benchmark_registry.py  benchmark_registry_data.py  benchmark_runner.py  benchmark_suite_manifest.py  benchmark_validate.py  bundle_identity.py  capabilities.py  certifyedge_pin.py  cli.py  computation_release_chain.py  computation_validate.py  conformance.py  conformance_report.py  conformance_run.py  external_attestation.py  hash.py  hash_vectors.py  lean_catalog.py  lean_check.py  lean_materialize.py  lean_trust.py  lean_validate.py  legacy_manifest.py  migrate.py  obligation_extraction_errors.py  paths.py  pcs_lean_codegen.py  pcs_projection.py  (+47 more)
python/scripts/: gen_canonical_json_v1_vectors.py  gen_certificate_mode_fixtures.py  gen_deferred_pf_core_fixtures.py  gen_pf_core_catalog.py  gen_pf_core_fixture_readmes.py  gen_pf_core_fixtures.py  materialize_benchmark_examples.py  materialize_benchmark_fixtures.py  materialize_benchmark_producer_examples.py  materialize_computation_fixtures.py  materialize_invalid_release_fixtures.py  materialize_labtrust_protocol_artifacts.py  materialize_tool_use_fixtures.py  split_validate.py
python/tests/: conftest.py  test_artifact_integrity.py  test_asset_resolver.py  test_benchmark.py  test_benchmark_ingest_contract.py  test_benchmark_schema_contract.py  test_canonical_hash_release.py  test_capabilities.py  test_certifyedge_pin.py  test_computation_release_chain.py  test_computation_validate.py  test_conformance_paths.py  test_external_attestation.py  test_hash_canonicalization.py  test_invalid_examples.py  test_labtrust_conformance.py  test_labtrust_protocol_artifacts.py  test_lean_trust.py  test_migrate.py  test_multidomain_workflows.py  test_packaging.py  test_pcs_lean_codegen.py  test_pcs_projection_binding.py  test_pf_core_bridge_demo.py  test_pf_core_bundle.py  test_pf_core_catalog_tool_map.py  test_pf_core_certificate_mode_codegen.py  test_pf_core_certificate_mode_resolution_vectors.py  test_pf_core_certificate_mode_status.py  test_pf_core_compositional.py  test_pf_core_contract_evidence.py  test_pf_core_cross_language.py  test_pf_core_deferred.py  test_pf_core_effect_frame_evidence.py  test_pf_core_handoff_evidence.py  test_pf_core_hash_vector_parity.py  test_pf_core_observational.py  test_pf_core_phase4_differential.py  test_pf_core_phase4_tcb.py  test_pf_core_phase5.py  (+33 more)
python/tests/hash_vectors/SignedScienceClaimBundle.v0/: canonical.txt  digest.txt  input.json
python/tests/hash_vectors/pf_core/PFCoreContract.v0/: canonical.txt  digest.txt  input.json
python/tests/hash_vectors/pf_core/PFCoreEvent.v0/: canonical.txt  digest.txt
python/tests/hash_vectors/pf_core/PFCoreTrace.v0/: canonical.txt  digest.txt  input.json
python/tests/hash_vectors/pf_core/certificate_mode_resolution/: vectors.json
python/tests/hash_vectors/pf_core/invalid/: claim_class_overclaim_trace.json  cross_tenant_leak.json  trace_hash_chain_break.json  unknown_direct_trace_effect.json
python/tests/hash_vectors/pf_core/invalid/denied_event_dropped/: tool_use_trace.json
rust/crates/pcs-core/: Cargo.toml
rust/crates/pcs-core/src/: artifact.rs  claim.rs  evidence_bundle.rs  hash.rs  lib.rs  pf_core.rs  pf_core_catalog.rs  runtime_receipt.rs  schema.rs  status.rs  trace_certificate.rs  validation.rs  verifier_assurance.rs
(+990 files in other folders)
