[package]
name = "pcs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proof-Carrying Science canonical artifact types and validation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
jsonschema = "0.26"

[dev-dependencies]
walkdir = "2"
proptest = "1"
